# opencv-mobile_jpg-streaming_test

./: CMakeLists.txt  README.md  cv_main.cpp  opencv-mobile-build.sh
